--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,12 +1,10 @@
 footer{
-	position: fixed;
+	position: static;
+	left: 0;
 	bottom: 0;
-}
- 
-@media (max-height:800px){
-	footer { position: static; }
-}
- 
+	width: 100%;
+	bottom: 0;
+} 
  
 .footer-distributed{
 	background-color: #2c292f;
