--- a/public/css/card.css
+++ b/public/css/card.css
@@ -4,52 +4,8 @@
 	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
 }
 
-.card-img {
-	position: relative;
-	overflow: hidden;
-	border-radius: 0;
-	z-index: 1;
-}
-
-.card-img img {
-	width: 100%;
-	height: auto;
-	display: block;
-}
-
-.card-img span {
-	position: absolute;
-    top: 15%;
-    left: 12%;
-    background: #1ABC9C;
-    padding: 6px;
-    color: #fff;
-    font-size: 12px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-    transform: translate(-50%,-50%);
-}
-.card-img span h4{
-        font-size: 12px;
-        margin:0;
-        padding:10px 5px;
-         line-height: 0;
-}
 .card-desc {
 	padding: 1.25rem;
-}
-
-.card-desc h3 {
-	color: #000000;
-    font-weight: 600;
-    font-size: 1.5em;
-    line-height: 1.3em;
-    margin-top: 0;
-    margin-bottom: 5px;
-    padding: 0;
 }
 
 .card-desc p {
@@ -63,31 +19,40 @@
 	padding: 0;
 	font-family: 'Raleway', sans-serif;
 }
-.btn-card{
-	background-color: #1ABC9C;
-	color: #fff;
-	box-shadow: 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
-    padding: .84rem 2.14rem;
-    font-size: .81rem;
-    -webkit-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
-    -o-transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
-    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out,-webkit-box-shadow .15s ease-in-out;
-    margin: 0;
-    border: 0;
-    -webkit-border-radius: .125rem;
-    border-radius: .125rem;
-    cursor: pointer;
-    text-transform: uppercase;
-    white-space: normal;
-    word-wrap: break-word;
-    color: #fff;
+.image {
+    width: 100%!important;
+    height: 155px!important;
+    background-size: cover;
+    background-position: center;
+    padding:0px !important;
+    margin-right: 0px!important;
 }
-.btn-card:hover {
-    background: orange;
+
+.ht-grid-item {
+    padding: 0!important;
 }
-a.btn-card {
-    text-decoration: none;
-    color: #fff;
+
+.wdd-item {
+    border-radius: 5px!important;
+}
+
+.wdd-item {
+    display: inline!important;
+    margin-right: 30px!important;
+    margin-bottom: 30px!important;
+}
+
+.wdd-img {
+    border-radius: 5px!important;
+}
+
+.wdd-cont {
+    padding: 0!important;
+    margin-bottom: 12px!important;
+}
+
+
+.wddc-name {
+    font-family: 'Montserrat', sans-serif!important;
+    font-weight: 400!important;
 }
